# tracker-mom

./: .gitignore  README.md  capacitor.config.json  package-lock.json  package.json  vite.config.js
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/mom/tracker/app/: MainActivity.java
android/app/src/main/res/values/: strings.xml
app/: api.js  app.vue  bg-location.js  encrypt.js  index.html  index.js  router.js  store.js
app/auth/: login.vue
app/components/: error.vue  not-found.vue  title.vue
app/follow/: accept.vue  follow-list.vue  invite.vue
app/follows/: follow-list.vue
app/home/: home.vue
app/services/: bg-location.js  encrypt.js  store.js
app/utils/: db.js  encrypt.js
bruno/backend/: Login.bru  bruno.json
server/: Dockerfile  README.md  compose.yml  conftest.py  manage.py  pyproject.toml
server/soketi/: table.sql
server/templates/: components.yaml
server/tmom/: api.py  asgi.py  middleware.py  settings.py  urls.py  wsgi.py
server/tmom/exchange/: admin.py  api.py  apps.py  models.py  schema.py  tests.py
server/tmom/exchange/migrations/: 0001_initial.py  0002_follow_active_off_on.py  0002_follow_approved_historicalfollow_approved.py  0002_followrequest_historicalfollowrequest.py  0003_alter_followrequest_code.py  0003_alter_followrequest_used_by.py  0004_remove_follow_approved_and_more.py  0005_rename_pubkey_follow_follow_pubkey_and_more.py  0006_locationshare.py
server/tmom/settings/: __init__.py  base.py  dev.py  prod.py
server/tmom/utils/: redis.py
