[project]
name = "tmom"
version = "0.1.0"
description = "Tracker Mom server"
authors = [
    {name = "Paul Bailey", email = "paul@neutron.studio"},
]
dependencies = [
    "django>=5.1.2",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "AGPL-3.0"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
dev = "python manage.py runserver 0.0.0.0:8000"
