[project]
name = "tmom"
version = "0.1.0"
description = "Tracker Mom server"
authors = [
    {name = "Paul Bailey", email = "paul@neutron.studio"},
]
dependencies = [
    "django>=5.1.2",
    "django-allauth>=65.1.0",
    "django-allauth-ui>=1.5.0",
    "django-simple-history>=3.7.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "AGPL-3.0"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
dev = "python manage.py runserver 0.0.0.0:8000"

[tool.ruff]
line-length = 100
indent-width = 2
